2002-06-14  John Levon  <moz@compsoc.man.ac.uk>

	* libop/op_events.c: add warning
 
	* module/Makefile.in: link against libop.a like I meant to
 
	* module/oprofile.h:
	* module/oprofile.c: readability cleanup
 
2002-06-11  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat.h:
	* module/x86/arch_compat.h: remove arch_compat.h,
	  add BUG_ON()

	* module/op_util.c: return -EINVAL not 1 from check_range() 

	* module/oprofile.c: use BUG_ON() in release functions,
	  fix use of check_range, remove spurious check for malloc
	  failure (already checked)

	* module/oprofile.h: clarify API 

	* module/x86/op_msr.h: new file, MSR back-compat

	* module/x86/op_nmi.c:
	* module/x86/op_apic.c: use it
 
2002-06-10  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* configure.in: remove old checks we don't need.
	  Add to EXTRA_CFLAGS not KCFLAGS 

	* module/Makefile.in: update to use Rules.make and
	  kernel rules.
 
	* module/op_init.c: make this one include kernel modversion
	  stuff for 2.2
 
	* module/oprofile.h: remove __cacheline_aligned in wrong place

	* module/x86/Makefile.in: use Rules.make (hacky)

	* module/x86/arch.mak: remove
 
	* module/x86/op_fixmap.c: add missing header
 
	* module/x86/op_syscalls.c: my_sys_exit is not static
 
2002-06-09  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/cverb.h:
	* libutil++/cverb.cpp: cverb ostream initializations
	* pp/op_merge.cpp:
	* pp/op_time_options.cpp:
	* pp/op_to_source_options.cpp:
	* pp/oprofpp_options.cpp: use it

	* utils/Makefile.in: fix a typo in lib dependencies

2002-06-07  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* pp/samples_container.cpp:
	* pp/samples_container.h: add an hint parameter to add()
	  used to avoid recording all samples.
	* pp/oprofpp.cpp: use it for the -s option. This change
	  slightly behavior of oprofpp -s, now percent are relative
	  to the selected symbol, not to the whole samples file.
	  Performance of oprofpp -s are improved a lot (40 times on vmlinux)
