@@ -1,3 +1,8 @@
+2002-06-15  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/oprofpp.cpp: call check_mtime() correctly
+	  for shared libraries
+ 
 2002-06-14  John Levon  <moz@compsoc.man.ac.uk>
 
 	* libop/op_events.c: add warning
